[package]
name = "lam"
version = "0.1.1"
description = "Launch Agent Manager"
authors = ["Darren <me@darrenholland.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.38", features = ["serialize"] }
dirs = "6.0"
