[package]
name = "lam"
version = "0.1.2"
description = "Launch Agent Manager"
authors = ["Darren <me@darrenholland.com>"]
license = "MIT"
edition = "2024"

[profile.release]
strip = true
lto = true

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.30.0"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.39", features = ["serialize"] }
dirs = "6.0"
